gerador-back/src/main/java/com/example/geradorback/services/error/ConstantesUtil.java
package com.example.geradorback.services.error;

import lombok.NoArgsConstructor;

@NoArgsConstructor
public class ConstantesUtil {
    public static final String ERROR_TITLE = "Ocorreu um erro";
    public static final String USUARIO_EXISTE = "Usuário já existe";
}
